fix for misalignment during loading of multiselect filters

--- a/src/components/online-resources/SearchForm/SearchFilters.module.css
+++ b/src/components/online-resources/SearchForm/SearchFilters.module.css
@@ -1,3 +1,7 @@
+.container {
+  width: 100%;
+}
+
 .desktopContainer {
   padding: var(--space-m) 0;
 }
